--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -1,3 +1,9 @@
+// Application
+
+@import "vendor"
+@import "skin"
+@import "reset"
+
 /* This css file is included in both Framework 2 and 3 pages.
  *
  * All styling of new functionality (Framework 3 or 2) should have its
