Removed text-shadow because it doesn't exist and added box-shadow

--- a/html/admin/css/vendor.styl
+++ b/html/admin/css/vendor.styl
@@ -26,26 +26,12 @@
 /******************************************************************************/
 
 
--vnd-text-shadow()
-	-webkit-text-shadow arguments
-	-moz-text-shadow arguments
-	-ms-text-shadow arguments
-	-o-text-shadow arguments
-	text-shadow arguments
-
--vnd-filter()
-	-webkit-filter: arguments
-	-moz-filter: arguments
-	-ms-filter: arguments
-	-o-filter: arguments
-	filter: arguments
-
--vnd-user-select()
-	-webkit-user-select: arguments
-	-moz-user-select: arguments
-	-ms-user-select: arguments
-	-o-user-select: arguments
-	user-select: arguments
+-vnd-box-shadow()
+	-webkit-box-shadow arguments
+	-moz-box-shadow arguments
+	-ms-box-shadow arguments
+	-o-box-shadow arguments
+	box-shadow arguments
 
 -vnd-box()
 	display: -webkit-box
