Removed margin from inputs and moved some body styling into reset

--- a/html/admin/css/reset.styl
+++ b/html/admin/css/reset.styl
@@ -1,2 +1,15 @@
 // Reset
 
+
+body {
+	background-color: #fff;
+	font-family: Arial,Verdana,Helvetica;
+	margin: 0em;
+	font-size: .8em;
+	padding: 0em;
+}
+
+li {
+	font-family: Arial, sans-serif;
+	line-height: 14pt;
+}
