--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -259,6 +259,12 @@ a,
   vertical-align: middle;
   display: inline-block;
 }
+.flex-page-dashboard .flex-page-dashboard-notices-technical > div:empty:before {
+  content: "There is no technical notice available.";
+  color: rgba(0,0,0,0.30);
+  font-style: oblique;
+  text-shadow: 0 1px 0 #fff;
+}
 /**************************************************************************/
 /* Component - Dashboard Updates General								  */
 /**************************************************************************/
@@ -272,6 +278,12 @@ a,
 .flex-page-dashboard .flex-page-dashboard-notices-general > header * {
   vertical-align: middle;
   display: inline-block;
+}
+.flex-page-dashboard .flex-page-dashboard-notices-general > div:empty:before {
+  content: "There is no technical notice available.";
+  color: rgba(0,0,0,0.30);
+  font-style: oblique;
+  text-shadow: 0 1px 0 #fff;
 }
 /**************************************************************************/
 /* Component - Dashboard Calendar										  */
