--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -272,6 +272,12 @@ a,
 	vertical-align: middle;
 	display: inline-block;
 }
+.flex-page-dashboard .flex-page-dashboard-notices-technical > div:empty:before {
+	content: "There is no technical notice available.";
+	color: rgba(0, 0, 0, 0.3);
+	font-style: oblique;
+	text-shadow: 0 1px 0 #ffffff;
+}
 
 /**************************************************************************/
 /* Component - Dashboard Updates General								  */
@@ -286,6 +292,12 @@ a,
 .flex-page-dashboard .flex-page-dashboard-notices-general > header * {
 	vertical-align: middle;
 	display: inline-block;
+}
+.flex-page-dashboard .flex-page-dashboard-notices-general > div:empty:before {
+	content: "There is no technical notice available.";
+	color: rgba(0, 0, 0, 0.3);
+	font-style: oblique;
+	text-shadow: 0 1px 0 #ffffff;
 }
 
 /**************************************************************************/
