--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -294,7 +294,7 @@ a,
 	display: inline-block;
 }
 .flex-page-dashboard .flex-page-dashboard-notices-general > div:empty:before {
-	content: "There is no technical notice available.";
+	content: "There is no general notice available.";
 	color: rgba(0, 0, 0, 0.3);
 	font-style: oblique;
 	text-shadow: 0 1px 0 #ffffff;
