--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -260,7 +260,7 @@ a,
   display: inline-block;
 }
 .flex-page-dashboard .flex-page-dashboard-notices-technical > div:empty:before {
-  content: "There is no technical notice available.";
+  content: "There are no technical notices.";
   color: rgba(0,0,0,0.30);
   font-style: oblique;
   text-shadow: 0 1px 0 #fff;
@@ -280,7 +280,7 @@ a,
   display: inline-block;
 }
 .flex-page-dashboard .flex-page-dashboard-notices-general > div:empty:before {
-  content: "There is no general notice available.";
+  content: "There are no general notices.";
   color: rgba(0,0,0,0.30);
   font-style: oblique;
   text-shadow: 0 1px 0 #fff;
