CSS Bugfix : content was being erroneously applied to the wrong element.

--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -272,7 +272,7 @@ a,
 	vertical-align: middle;
 	display: inline-block;
 }
-.flex-page-dashboard .flex-page-dashboard-notices-technical > div:empty:before {
+.flex-page-dashboard .flex-page-dashboard-notices-technical > div:nth-child(2):empty:before {
 	content: "There are no technical notices.";
 	color: rgba(0, 0, 0, 0.3);
 	font-style: oblique;
@@ -293,7 +293,7 @@ a,
 	vertical-align: middle;
 	display: inline-block;
 }
-.flex-page-dashboard .flex-page-dashboard-notices-general > div:empty:before {
+.flex-page-dashboard .flex-page-dashboard-notices-general > div:nth-child(2):empty:before {
 	content: "There are no general notices.";
 	color: rgba(0, 0, 0, 0.3);
 	font-style: oblique;
