--- a/html/customer/css/default.css
+++ b/html/customer/css/default.css
@@ -402,6 +402,12 @@ textarea.invalid {
 	width:					442px
 }
 
+.customer-brand-logo {
+	max-height: 60px;
+	max-width: 320px;
+	border: 0;
+}
+
 /**************************************************************************/
 /* CREDIT CARD PAYMENT.																  */
 /**************************************************************************/
