--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -121,6 +121,13 @@ a,
 }
 .fw-popup-header-close {
 	float: right;
+	background-image: url('/admin/img/template/close.png') !important;
+	width: 16px;
+	height: 16px;
+	margin: 0 !important;
+	padding: 0 !important;
+	border: none !important;
+	background-color: transparent !important;
 }
 .fw-popup-alert-buttons {
 	text-align: center;
