--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -9912,6 +9912,8 @@ div.component-collections-scenario > table.reflex {
 	min-height	: 8ex;
 }
 
+.popup-adjustment-request table.input tbody tr th
+	width 12em
 /************************** END - Popup Adjustment Request - END **************************/
 
 /************************** START - Page Adjustment Management - START **************************/
